# FastAPI-Student-Management-System

./: .gitignore  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
